Fix alignment for medals/pp/playtime display

--- a/resources/assets/less/bem/profile-detail.less
+++ b/resources/assets/less/bem/profile-detail.less
@@ -68,5 +68,10 @@
   &__values {
     display: flex;
     gap: 20px;
+
+    &--grid {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
   }
 }
