--- a/resources/assets/less/bem/value-display.less
+++ b/resources/assets/less/bem/value-display.less
@@ -48,7 +48,7 @@
   }
 
   &--plain-wide {
-    flex: 2;
+    grid-column-end: span 2;
   }
 
   &--rank {
